--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LanceMe",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Exercicio da EBAC",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,12 @@
     "bootstrap": "^5.1.3"
   },
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
